--- a/01-前端开发基础/案例练习/03_王者荣耀/css/index.less
+++ b/01-前端开发基础/案例练习/03_王者荣耀/css/index.less
@@ -186,7 +186,6 @@
 
 .container {
   width: 1200px;
-  background-color: pink;
   margin: 0 auto;
 }
 
@@ -195,14 +194,53 @@
     display: flex;
     height: 342px;
 
-
     .banner {
       width: 605px;
-      background-color: red;
+
+      .banner-img-list {
+        display: flex;
+        height: 298px;
+        overflow: hidden;
+      }
+
+      .dotted {
+        display: flex;
+        line-height: 44px;
+        justify-content: space-evenly;
+
+        .item {
+          a {
+            color: #b1b2be;
+            display: block;
+            text-align: center;
+            background-color: #000;
+            width: (605px / 5);
+
+            &:hover {
+              color: #f3c258;
+              background-color: #262626;
+            }
+          }
+        }
+      }
     }
 
     .news {
       flex: 1;
+      padding: 0 17px;
+      background-color: #282a2c;
+
+      .news-classify {
+
+      }
+
+      .notice {
+
+      }
+
+      .content {
+
+      }
     }
 
     .other {
