--- a/01-前端开发基础/案例练习/03_王者荣耀/css/index.less
+++ b/01-前端开发基础/案例练习/03_王者荣耀/css/index.less
@@ -209,12 +209,13 @@
         justify-content: space-evenly;
 
         .item {
+          flex: 1;
+
           a {
             color: #b1b2be;
             display: block;
             text-align: center;
             background-color: #000;
-            width: (605px / 5);
 
             &:hover {
               color: #f3c258;
@@ -229,9 +230,28 @@
       flex: 1;
       padding: 0 17px;
       background-color: #282a2c;
+      color: #fff;
 
       .news-classify {
+        display: flex;
+        justify-content: space-between;
+        height: 45px;
+        line-height: 42px;
+        border-bottom: 3px solid #000;
 
+        a {
+          display: block;
+          color: #fff;
+          font-size: 14px;
+          height: 45px;
+          line-height: 45px;
+          padding: 0 10px;
+
+          &:hover {
+            color: #f3c258;
+            border-bottom: 3px solid #f3c258;
+          }
+        }
       }
 
       .notice {
