--- a/01-前端开发基础/案例练习/03_王者荣耀/css/index.less
+++ b/01-前端开发基础/案例练习/03_王者荣耀/css/index.less
@@ -239,6 +239,12 @@
         line-height: 42px;
         border-bottom: 3px solid #000;
 
+        .active {
+          a {
+            border-bottom: 3px solid #f3c258;
+          }
+        }
+
         a {
           display: block;
           color: #fff;
@@ -251,6 +257,7 @@
             color: #f3c258;
             border-bottom: 3px solid #f3c258;
           }
+
         }
       }
 
