--- a/01-前端开发基础/案例练习/03_王者荣耀/css/index.less
+++ b/01-前端开发基础/案例练习/03_王者荣耀/css/index.less
@@ -270,7 +270,16 @@
       }
 
       .notice {
+        width: 230px;
+        height: 36px;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        overflow: hidden;
 
+        a {
+          font-size: 18px;
+          color: #f3c258;
+        }
       }
 
       .content {
