--- a/01-前端开发基础/案例练习/03_王者荣耀/css/index.less
+++ b/01-前端开发基础/案例练习/03_王者荣耀/css/index.less
@@ -228,6 +228,8 @@
 
     .news {
       flex: 1;
+      /* 单行文本溢出处理 */
+      overflow: hidden;
       padding: 0 17px;
       background-color: #282a2c;
       color: #fff;
@@ -264,21 +266,25 @@
               }
             }
           }
-
-
         }
       }
 
       .notice {
-        width: 230px;
         height: 36px;
-        text-overflow: ellipsis;
-        white-space: nowrap;
-        overflow: hidden;
+        line-height: 36px;
+        padding: 0 15px;
+        margin: 18px 0;
+        background-color: #414046;
+
 
         a {
+          display: block;
           font-size: 18px;
           color: #f3c258;
+          /* 单行文本溢出处理 */
+          text-overflow: ellipsis;
+          white-space: nowrap;
+          overflow: hidden;
         }
       }
 
