--- a/01-前端开发基础/案例练习/04_考拉海购/css/index.less
+++ b/01-前端开发基础/案例练习/04_考拉海购/css/index.less
@@ -20,3 +20,26 @@
     }
   }
 }
+
+.download {
+  display: flex;
+  height: 16vw /* 120/7.5 */;
+  background-color: pink;
+
+  .left {
+    flex: 1;
+  }
+
+  .right {
+    width: 25.2vw /* 189/7.5 */;
+    text-align: center;
+    line-height: 16vw /* 120/7.5 */;
+    background-image: linear-gradient(to right, #f81c16, #fe496d);
+
+    a {
+      display: block;
+      color: #fff;
+    }
+  }
+}
+
