--- a/01-前端开发基础/案例练习/04_考拉海购/css/index.less
+++ b/01-前端开发基础/案例练习/04_考拉海购/css/index.less
@@ -1,3 +1,9 @@
+.text-overflow-ellipsis {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .tab-bar {
   position: fixed;
   left: 0;
@@ -24,10 +30,41 @@
 .download {
   display: flex;
   height: 16vw /* 60/3.75 */;
-  background-color: pink;
 
   .left {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
     flex: 1;
+
+    .logo {
+      width: 10.67vw /* 40/3.75 */;
+      height: 10.67vw /* 40/3.75 */;
+
+      img {
+        margin-left: 2.13vw /* 8/3.75 */;
+        width: 10.67vw /* 40/3.75 */;
+      }
+    }
+
+    .info {
+      flex: 1;
+      overflow: hidden;
+      margin-left: 2.67vw /* 10/3.75 */;
+
+      .title {
+        font-size: 3.73vw /* 14/3.75 */;
+        .text-overflow-ellipsis();
+      }
+
+      .desc {
+        margin-top: 0.53vw /* 2/3.75 */;
+        font-size: 3.2vw /* 12/3.75 */;
+        color: #ccc;
+        .text-overflow-ellipsis();
+      }
+    }
   }
 
   .right {
@@ -39,6 +76,7 @@
     a {
       display: block;
       color: #fff;
+      font-size: 4.27vw /* 16/3.75 */;
     }
   }
 }
