--- a/01-前端开发基础/案例练习/04_考拉海购/css/index.less
+++ b/01-前端开发基础/案例练习/04_考拉海购/css/index.less
@@ -36,6 +36,7 @@
     justify-content: center;
     align-items: center;
     overflow: hidden;
+    padding: 0 2.67vw /* 10/3.75 */;
     flex: 1;
 
     .logo {
@@ -43,7 +44,6 @@
       height: 10.67vw /* 40/3.75 */;
 
       img {
-        margin-left: 2.13vw /* 8/3.75 */;
         width: 10.67vw /* 40/3.75 */;
       }
     }
