--- a/01-前端开发基础/案例练习/04_考拉海购/css/index.less
+++ b/01-前端开发基础/案例练习/04_考拉海购/css/index.less
@@ -30,6 +30,7 @@
 .download {
   display: flex;
   height: 16vw /* 60/3.75 */;
+  border-bottom: 0.27vw /* 1/3.75 */ solid #ddd;
 
   .left {
     display: flex;
