--- a/01-前端开发基础/案例练习/04_考拉海购/css/index.css
+++ b/01-前端开发基础/案例练习/04_考拉海购/css/index.css
@@ -25,6 +25,7 @@
 .download {
   display: flex;
   height: 16vw /* 60/3.75 */;
+  border-bottom: 0.27vw /* 1/3.75 */ solid #ddd;
 }
 .download .left {
   display: flex;
