--- a/01-前端开发基础/案例练习/04_考拉海购/css/index.css
+++ b/01-前端开发基础/案例练习/04_考拉海购/css/index.css
@@ -1,8 +1,10 @@
+/* 单行文本溢出处理 */
 .text-overflow-ellipsis {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+/* 主题色 */
 .tab-bar {
   position: fixed;
   left: 0;
@@ -71,5 +73,57 @@
   display: block;
   color: #fff;
   font-size: 4.27vw /* 16/3.75 */;
+}
+.top-bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 10.67vw /* 40/3.75 */;
+}
+.top-bar .search {
+  position: relative;
+  text-align: center;
+  width: 74.67vw /* 280/3.75 */;
+  height: 7.47vw /* 28/3.75 */;
+  border: 1px solid #e31436;
+  border-radius: 3.73vw /* 14/3.75 */;
+}
+.top-bar .search:before {
+  position: absolute;
+  left: 2.13vw /* 8/3.75 */;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
+  content: '';
+  display: block;
+  width: 3.2vw /* 12/3.75 */;
+  height: 3.2vw /* 12/3.75 */;
+  background: url("../assets/icon-search.png") no-repeat;
+  background-size: 3.2vw /* 12/3.75 */ 3.2vw /* 12/3.75 */;
+}
+.top-bar .search input {
+  position: absolute;
+  left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  width: 56.8vw /* 213/3.75 */;
+  height: 6.93vw /* 26/3.75 */;
+}
+.top-bar .btn {
+  width: 16vw /* 60/3.75 */;
+  height: 7.47vw /* 28/3.75 */;
+  color: #e31436;
+  text-align: center;
+  line-height: 7.47vw /* 28/3.75 */;
+  border: 1px solid #e31436;
+  border-radius: 0.13vw /* 0.5/3.75 */;
+}
+.top-bar .btn a {
+  display: block;
+  color: #e31436;
+  font-size: 2.67vw /* 10/3.75 */;
 }
 /*# sourceMappingURL=index.css.map */
