--- a/01-前端开发基础/案例练习/04_考拉海购/css/index.less
+++ b/01-前端开发基础/案例练习/04_考拉海购/css/index.less
@@ -1,8 +1,12 @@
+/* 单行文本溢出处理 */
 .text-overflow-ellipsis {
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
 }
+
+/* 主题色 */
+@mainColor: #e31436;
 
 .tab-bar {
   position: fixed;
@@ -78,6 +82,66 @@
       display: block;
       color: #fff;
       font-size: 4.27vw /* 16/3.75 */;
+    }
+  }
+}
+
+
+.top-bar {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 10.67vw /* 40/3.75 */;
+
+  .search {
+    position: relative;
+    text-align: center;
+    width: 74.67vw /* 280/3.75 */;
+    height: 7.47vw /* 28/3.75 */;
+    border: 1px solid @mainColor;
+    border-radius: 3.73vw /* 14/3.75 */;
+
+    &:before {
+      position: absolute;
+      left: 2.13vw /* 8/3.75 */;
+      right: 0;
+      top: 0;
+      bottom: 0;
+      margin: auto 0;
+      content: '';
+      display: block;
+      width: 3.2vw /* 12/3.75 */;
+      height: 3.2vw /* 12/3.75 */;
+      background: url("../assets/icon-search.png") no-repeat;
+      background-size: 3.2vw /* 12/3.75 */ 3.2vw /* 12/3.75 */;
+    }
+
+    input {
+      position: absolute;
+      left: 0;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      margin: auto;
+      width: 56.8vw /* 213/3.75 */;
+      height: 6.93vw /* 26/3.75 */;
+    }
+  }
+
+  .btn {
+    width: 16vw /* 60/3.75 */;
+    height: 7.47vw /* 28/3.75 */;
+    color: @mainColor;
+    text-align: center;
+    line-height: 7.47vw /* 28/3.75 */;
+    border: 1px solid @mainColor;
+    border-radius: 0.13vw /* 0.5/3.75 */;
+
+    a {
+      display: block;
+      color: @mainColor;
+      font-size: 2.67vw /* 10/3.75 */;
+
     }
   }
 }
