--- a/01-前端开发基础/案例练习/04_考拉海购/css/index.css
+++ b/01-前端开发基础/案例练习/04_考拉海购/css/index.css
@@ -126,25 +126,40 @@
   color: #e31436;
   font-size: 2.67vw /* 10/3.75 */;
 }
-.banner {
+.banner .container {
+  background-color: #f3f3f3;
+}
+.banner .container .banner-list {
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100vw /* 375/3.75 */;
   height: 47.47vw /* 178/3.75 */;
-  background-color: #f3f3f3;
 }
-.banner .item {
+.banner .container .banner-list .item {
   /* 隐藏其他的元素 */
 }
-.banner .item:not(.item:first-child) {
+.banner .container .banner-list .item:not(.item:first-child) {
   display: none;
 }
-.banner .item a {
+.banner .container .banner-list .item a {
   display: block;
 }
-.banner .item a img {
+.banner .container .banner-list .item a img {
   width: 93.6vw /* 351/3.75 */;
   height: 47.2vw /* 177/3.75 */;
+}
+.nav .container {
+  background-color: #f3f3f3;
+}
+.nav .container .nav-list {
+  display: flex;
+}
+.nav .container .nav-list .item a {
+  display: block;
+}
+.nav .container .nav-list .item a img {
+  width: 20vw /* 75/3.75 */;
+  height: 20.8vw /* 78/3.75 */;
 }
 /*# sourceMappingURL=index.css.map */
