--- a/01-前端开发基础/案例练习/04_考拉海购/css/index.css
+++ b/01-前端开发基础/案例练习/04_考拉海购/css/index.css
@@ -126,7 +126,7 @@
   color: #e31436;
   font-size: 2.67vw /* 10/3.75 */;
 }
-.banner .container {
+.banner {
   background-color: #f3f3f3;
 }
 .banner .container .banner-list {
@@ -149,7 +149,7 @@
   width: 93.6vw /* 351/3.75 */;
   height: 47.2vw /* 177/3.75 */;
 }
-.nav .container {
+.nav {
   background-color: #f3f3f3;
 }
 .nav .container .nav-list {
@@ -161,5 +161,100 @@
 .nav .container .nav-list .item a img {
   width: 20vw /* 75/3.75 */;
   height: 20.8vw /* 78/3.75 */;
+}
+.subsidy {
+  padding: 3.2vw /* 12/3.75 */;
+  background-color: #f3f3f3;
+}
+.subsidy .container {
+  width: 93.6vw /* 351/3.75 */;
+  height: 44vw /* 165/3.75 */;
+  margin: 0 auto;
+  border-radius: 3.2vw /* 12/3.75 */;
+  padding: 1.6vw /* 6/3.75 */;
+  background-color: #fff;
+}
+.subsidy .container .subsidy-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 10.67vw /* 40/3.75 */;
+}
+.subsidy .container .subsidy-header .subsidy-header-left {
+  display: flex;
+}
+.subsidy .container .subsidy-header .subsidy-header-left h2 {
+  font-size: 4.27vw /* 16/3.75 */;
+}
+.subsidy .container .subsidy-header .subsidy-header-left h2 a {
+  display: block;
+}
+.subsidy .container .subsidy-header .subsidy-header-left h2 a img {
+  vertical-align: middle;
+  width: 16.8vw /* 63/3.75 */;
+  height: 4.27vw /* 16/3.75 */;
+}
+.subsidy .container .subsidy-header .subsidy-header-left .countdown {
+  margin-left: 1.6vw /* 6/3.75 */;
+}
+.subsidy .container .subsidy-header .subsidy-header-left .countdown .time {
+  width: 5.33vw /* 19.97/3.75 */;
+  height: 4.27vw /* 16/3.75 */;
+  font-size: 3.2vw;
+  color: #fff;
+  border-radius: 0.8vw;
+  background-color: #e31436;
+}
+.subsidy .container .subsidy-header .subsidy-header-left .countdown span:not(.time) {
+  color: #e31436;
+}
+.subsidy .container .subsidy-header .subsidy-header-right {
+  padding-right: 2.4vw /* 9/3.75 */;
+}
+.subsidy .container .subsidy-header .subsidy-header-right a {
+  position: relative;
+  display: block;
+  font-size: 3.2vw /* 12/3.75 */;
+  color: #e31436;
+}
+.subsidy .container .subsidy-header .subsidy-header-right a:after {
+  position: absolute;
+  top: 1.6vw;
+  right: -2.07vw /* -7.76/3.75 */;
+  content: "";
+  width: 1.2vw;
+  height: 1.2vw;
+  border-color: #e31436 #e31436 transparent transparent;
+  border-style: solid;
+  border-width: 0.26667vw;
+  transform: rotate(45deg);
+}
+.subsidy .container .subsidy-content {
+  display: flex;
+}
+.subsidy .container .subsidy-content .item {
+  flex: 1;
+}
+.subsidy .container .subsidy-content .item a {
+  display: block;
+}
+.subsidy .container .subsidy-content .item a img {
+  width: 20.928vw /* 78.48/3.75 */;
+  height: 78.48px /* 84.75/3.75 */;
+}
+.subsidy .container .subsidy-content .item a .price {
+  text-align: center;
+}
+.subsidy .container .subsidy-content .item a .price .now-price {
+  display: flex;
+  font-size: 3.2vw /* 12/3.75 */;
+  color: #e31436;
+}
+.subsidy .container .subsidy-content .item a .price .now-price .price-num {
+  font-size: 3.73vw /* 14/3.75 */;
+  font-weight: bold;
+}
+.subsidy .container .subsidy-content .item a .price .original-price {
+  font-size: 3.2vw /* 12/3.75 */;
 }
 /*# sourceMappingURL=index.css.map */
