--- a/01-前端开发基础/案例练习/04_考拉海购/css/index.less
+++ b/01-前端开发基础/案例练习/04_考拉海购/css/index.less
@@ -147,8 +147,9 @@
 }
 
 .banner {
+  background-color: #f3f3f3;
+
   .container {
-    background-color: #f3f3f3;
 
     .banner-list {
       display: flex;
@@ -181,8 +182,9 @@
 
 
 .nav {
+  background-color: #f3f3f3;
+
   .container {
-    background-color: #f3f3f3;
 
     .nav-list {
       display: flex;
@@ -199,6 +201,128 @@
       }
     }
 
+  }
+}
+
+.subsidy {
+  padding: 3.2vw /* 12/3.75 */;
+  background-color: #f3f3f3;
+
+  .container {
+    width: 93.6vw /* 351/3.75 */;
+    height: 44vw /* 165/3.75 */;
+    margin: 0 auto;
+    border-radius: 3.2vw /* 12/3.75 */;
+    padding: 1.6vw /* 6/3.75 */;
+    background-color: #fff;
+
+    .subsidy-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      height: 10.67vw /* 40/3.75 */;
+
+      .subsidy-header-left {
+        display: flex;
+
+
+        h2 {
+          font-size: 4.27vw /* 16/3.75 */;
+
+          a {
+            display: block;
+
+            img {
+              vertical-align: middle;
+              width: 16.8vw /* 63/3.75 */;
+              height: 4.27vw /* 16/3.75 */;
+            }
+          }
+        }
+
+        .countdown {
+          margin-left: 1.6vw /* 6/3.75 */;
+
+          .time {
+            width: 5.33vw /* 19.97/3.75 */;
+            height: 4.27vw /* 16/3.75 */;
+            font-size: 3.2vw;
+            color: #fff;
+            border-radius: 0.8vw;
+            background-color: @mainColor;
+          }
+
+          span {
+            &:not(.time) {
+              color: @mainColor;
+            }
+          }
+        }
+      }
+
+      .subsidy-header-right {
+        padding-right: 2.4vw /* 9/3.75 */;
+
+        a {
+          position: relative;
+          display: block;
+          font-size: 3.2vw /* 12/3.75 */;
+          color: @mainColor;
+
+          &:after {
+            position: absolute;
+            top: 1.6vw;
+            right: -2.07vw /* -7.76/3.75 */;
+            content: "";
+            width: 1.2vw;
+            height: 1.2vw;
+            border-color: @mainColor @mainColor transparent transparent;
+            border-style: solid;
+            border-width: 0.26667vw;
+            transform: rotate(45deg);
+
+          }
+        }
+      }
+
+
+    }
+
+    .subsidy-content {
+      display: flex;
+
+      .item {
+        flex: 1;
+
+        a {
+          display: block;
+
+          img {
+            width: 20.928vw /* 78.48/3.75 */;
+            height: 78.48px /* 84.75/3.75 */;
+          }
+
+          .price {
+            text-align: center;
+
+            .now-price {
+              display: flex;
+              font-size: 3.2vw /* 12/3.75 */;
+              color: @mainColor;
+
+              .price-num {
+                font-size: 3.73vw /* 14/3.75 */;
+                font-weight: bold;
+              }
+            }
+
+            .original-price {
+              font-size: 3.2vw /* 12/3.75 */;
+            }
+          }
+        }
+      }
+    }
   }
 }
 
