--- a/01-前端开发基础/案例练习/04_考拉海购/css/reset.css
+++ b/01-前端开发基础/案例练习/04_考拉海购/css/reset.css
@@ -24,3 +24,9 @@ input, a {
 input {
     border: 0;
 }
+
+h1, h2, h3, h4, h5, h6 {
+    /* 父元素字号的百分比 */
+    font-size: 100%;
+    font-weight: normal;
+}
