--- a/01-前端开发基础/案例练习/04_考拉海购/css/index.css
+++ b/01-前端开发基础/案例练习/04_考拉海购/css/index.css
@@ -255,6 +255,8 @@
   font-weight: bold;
 }
 .subsidy .container .subsidy-content .item a .price .original-price {
+  color: #ccc;
+  text-decoration: line-through;
   font-size: 3.2vw /* 12/3.75 */;
 }
 /*# sourceMappingURL=index.css.map */
