--- a/01-前端开发基础/案例练习/04_考拉海购/css/index.less
+++ b/01-前端开发基础/案例练习/04_考拉海购/css/index.less
@@ -269,7 +269,7 @@
           font-size: 3.2vw /* 12/3.75 */;
           color: @mainColor;
 
-          &:after {
+          &::after {
             position: absolute;
             top: 1.6vw;
             right: -2.07vw /* -7.76/3.75 */;
