--- a/01-前端开发基础/案例练习/04_考拉海购/css/index.css
+++ b/01-前端开发基础/案例练习/04_考拉海购/css/index.css
@@ -217,7 +217,7 @@
   font-size: 3.2vw /* 12/3.75 */;
   color: #e31436;
 }
-.subsidy .container .subsidy-header .subsidy-header-right a:after {
+.subsidy .container .subsidy-header .subsidy-header-right a::after {
   position: absolute;
   top: 1.6vw;
   right: -2.07vw /* -7.76/3.75 */;
