--- a/01-前端开发基础/案例练习/04_考拉海购/css/index.css
+++ b/01-前端开发基础/案例练习/04_考拉海购/css/index.css
@@ -219,8 +219,9 @@
 }
 .subsidy .container .subsidy-header .subsidy-header-right a::after {
   position: absolute;
-  top: 1.6vw;
-  right: -2.07vw /* -7.76/3.75 */;
+  top: 0;
+  bottom: 0;
+  margin: auto 0;
   content: "";
   width: 1.2vw;
   height: 1.2vw;
