--- a/01-前端开发基础/案例练习/04_考拉海购/css/index.less
+++ b/01-前端开发基础/案例练习/04_考拉海购/css/index.less
@@ -271,8 +271,9 @@
 
           &::after {
             position: absolute;
-            top: 1.6vw;
-            right: -2.07vw /* -7.76/3.75 */;
+            top: 0;
+            bottom: 0;
+            margin: auto 0;
             content: "";
             width: 1.2vw;
             height: 1.2vw;
