--- a/01-前端开发基础/案例练习/04_考拉海购/css/index.less
+++ b/01-前端开发基础/案例练习/04_考拉海购/css/index.less
@@ -205,7 +205,7 @@
 }
 
 .subsidy {
-  padding: 0 3.2vw /* 12/3.75 */;
+  padding: 3.2vw 3.2vw /* 12/3.75 */;
   background-color: #f3f3f3;
 
   .container {
