--- a/01-前端开发基础/案例练习/04_考拉海购/css/index.less
+++ b/01-前端开发基础/案例练习/04_考拉海购/css/index.less
@@ -317,7 +317,7 @@
               }
             }
 
-            .original-price {
+            .old-price {
               color: #ccc;
               text-decoration: line-through;
               font-size: 3.2vw /* 12/3.75 */;
