--- a/01-前端开发基础/案例练习/04_考拉海购/css/index.less
+++ b/01-前端开发基础/案例练习/04_考拉海购/css/index.less
@@ -9,6 +9,7 @@
 @mainColor: #e31436;
 
 .tab-bar {
+  background-color: #fff;
   position: fixed;
   left: 0;
   bottom: 0;
@@ -326,6 +327,151 @@
         }
       }
     }
+  }
+}
+
+.category {
+  padding: 3.2vw 3.2vw /* 12/3.75 */;
+  background-color: #f3f3f3;
+
+  .container {
+
+    .header {
+      display: flex;
+      text-align: center;
+      margin-bottom: 3.2vw /* 12/3.75 */;
+
+      .item {
+        flex: 1;
+
+        a {
+          display: block;
+
+          .title {
+            font-size: 4.27vw /* 16/3.75 */;
+          }
+
+          .desc {
+            font-size: 3.2vw /* 12/3.75 */;
+            color: #ccc;
+          }
+        }
+      }
+
+      .active {
+        a {
+          .title {
+            color: @mainColor;
+          }
+
+          .desc {
+            color: #fff;
+            padding: 0 1.6vw;
+            border-radius: 2.4vw;
+            background-color: #ff2c5a;
+          }
+        }
+
+      }
+    }
+
+    .content {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      margin-bottom: 13.33vw /* 50/3.75 */;
+
+      .item {
+        margin-top: 1.07vw /* 4/3.75 */;
+        overflow: hidden;
+        background-color: #fff;
+
+        a {
+          display: block;
+
+          img {
+            width: 46.528vw /* 174.48/3.75 */;
+          }
+
+          .brand {
+            width: 46.528vw /* 174.48/3.75 */;
+            padding-left: 6.93vw /* 26/3.75 */;
+            position: relative;
+
+            &::before {
+              position: absolute;
+              left: 0;
+              top: 0;
+              right: 0;
+              bottom: 0;
+              margin: auto 0 auto 1.6vw;
+              display: block;
+              content: '';
+              width: 4vw /* 15/3.75 */;
+              height: 4vw /* 15/3.75 */;
+              background: url("../assets/icon-brand.png") no-repeat;
+              background-size: 4vw /* 15/3.75 */ 4vw /* 15/3.75 */;
+            }
+
+            .name {
+              font-size: 3.2vw /* 12/3.75 */;
+            }
+          }
+
+          .property {
+            position: relative;
+            width: 46.528vw /* 174.48/3.75 */;
+            font-size: 3.47vw /* 13/3.75 */;
+            padding-left: 9.07vw /* 34/3.75 */;
+            padding-top: 1.6vw /* 6/3.75 */;
+
+            &::before {
+              position: absolute;
+              left: 0;
+              top: 0;
+              right: 0;
+              bottom: 0;
+              margin: auto 0 auto 1.6vw;
+              display: block;
+              content: '';
+              width: 6.928vw /* 25.98/3.75 */;
+              height: 3.47vw /* 13/3.75 */;
+              background: url("../assets/icon-property.png") no-repeat;
+              background-size: 6.928vw /* 25.98/3.75 */ 3.47vw /* 13/3.75 */;
+            }
+
+            p {
+              .text-overflow-ellipsis();
+            }
+          }
+
+          .tags {
+            width: 46.528vw /* 174.48/3.75 */;
+            padding-top: 1.6vw /* 6/3.75 */;
+            padding-left: 1.6vw /* 6/3.75 */;
+            color: @mainColor;
+            font-size: 3.2vw /* 12/3.75 */;
+
+            span {
+              border: 0.27vw /* 1/3.75 */ solid @mainColor;
+            }
+          }
+
+          .price {
+            width: 46.528vw /* 174.48/3.75 */;
+            padding-left: 1.6vw /* 6/3.75 */;
+            padding-top: 1.6vw /* 6/3.75 */;
+            color: @mainColor;
+            font-size: 3.2vw /* 12/3.75 */;
+
+            span {
+              font-size: 4.8vw /* 18/3.75 */;
+            }
+          }
+        }
+      }
+    }
+
   }
 }
 
