--- a/01-前端开发基础/案例练习/03_王者荣耀/css/index.css
+++ b/01-前端开发基础/案例练习/03_王者荣耀/css/index.css
@@ -2,6 +2,13 @@
   width: 990px;
   margin: 0 auto;
 }
+/* 主题色 */
+/* 单行文本溢出处理 */
+.text-overflow-ellipsis {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
 .top-bar {
   border-bottom: 1px solid #f5f5f5;
 }
@@ -224,6 +231,36 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+}
+.main .container .news .content {
+  font-size: 12px;
+}
+.main .container .news .content .item {
+  display: flex;
+  align-items: center;
+  margin-bottom: 13px;
+  overflow: hidden;
+}
+.main .container .news .content .item a {
+  display: block;
+  color: #b8b9c5;
+  font-size: 13px;
+  flex: 1;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+.main .container .news .content .item a .news-type {
+  text-align: center;
+  color: #e31436;
+  border: 1px solid #e31436;
+  border-radius: 2px;
+  padding: 0 2px;
+}
+.main .container .news .content .item .date {
+  padding: 0 8px;
+  color: #999;
+  font-size: 12px;
 }
 .main .container .other {
   width: 236px;
