--- a/01-前端开发基础/案例练习/03_王者荣耀/css/index.less
+++ b/01-前端开发基础/案例练习/03_王者荣耀/css/index.less
@@ -3,6 +3,16 @@
   margin: 0 auto;
 }
 
+/* 主题色 */
+@mainColor: #e31436;
+
+/* 单行文本溢出处理 */
+.text-overflow-ellipsis {
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .top-bar {
   border-bottom: 1px solid #f5f5f5;
 
@@ -289,7 +299,39 @@
       }
 
       .content {
+        font-size: 12px;
 
+        .item {
+          display: flex;
+          align-items: center;
+          margin-bottom: 13px;
+          overflow: hidden;
+
+          a {
+            display: block;
+            color: #b8b9c5;
+            font-size: 13px;
+            flex: 1;
+            .text-overflow-ellipsis();
+
+            .news-type {
+              text-align: center;
+              color: @mainColor;
+              border: 1px solid @mainColor;
+              border-radius: 2px;
+              padding: 0 2px;
+            }
+
+          }
+
+
+          .date {
+            padding: 0 8px;
+            color: #999;
+            font-size: 12px;
+          }
+
+        }
       }
     }
 
