--- a/02-JavaScript/01-JavaScript基础/03_华为商城/css/reset.css
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/css/reset.css
@@ -1,17 +1,18 @@
-body, ul, li {
-  padding: 0;
-  margin: 0;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
 
 ul, li {
-  list-style: none;
+    list-style: none;
 }
 
 a {
-  text-decoration: none;
-  color: #333;
+    text-decoration: none;
+    color: #333;
 }
 
 img {
-  vertical-align: top;
+    vertical-align: top;
 }
