--- a/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.css
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.css
@@ -35,4 +35,7 @@
   color: #666;
   cursor: auto;
 }
+.product .filter-condition .row .active {
+  color: #f00;
+}
 /*# sourceMappingURL=index.css.map */
