--- a/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.css
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.css
@@ -2,6 +2,7 @@
 .product {
   /* 面包屑 */
   /* 过滤条件 */
+  /* 商品列表 */
 }
 .product .crumbs {
   display: flex;
@@ -37,5 +38,60 @@
 }
 .product .filter-condition .row .active {
   color: #f00;
+}
+.product .product-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+.product .product-list .item {
+  width: 291px;
+  background-color: #fff;
+  margin-bottom: 12px;
+  padding-bottom: 20px;
+}
+.product .product-list .item a {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.product .product-list .item a .album {
+  width: 180px;
+  height: 180px;
+  margin: 30px 0;
+}
+.product .product-list .item a .title {
+  font-weight: bold;
+  color: #000;
+}
+.product .product-list .item a .sub-title {
+  color: #999;
+  margin-top: 12px;
+  margin-bottom: 18px;
+}
+.product .product-list .item a .price {
+  font-weight: bold;
+  color: #f00;
+  font-size: 16px;
+  margin-bottom: 10px;
+}
+.product .product-list .item a .tags {
+  display: flex;
+  font-size: 12px;
+  margin-bottom: 10px;
+}
+.product .product-list .item a .tags .tag {
+  border: 1px solid red;
+  border-radius: 3px;
+  padding: 2px 3px;
+  margin: 0 3px;
+}
+.product .product-list .item a .appraise {
+  display: flex;
+  font-size: 12px;
+}
+.product .product-list .item a .appraise .count {
+  margin: 0 5px;
 }
 /*# sourceMappingURL=index.css.map */
