--- a/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.less
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.less
@@ -48,4 +48,74 @@
 
     }
   }
+
+  /* 商品列表 */
+
+  .product-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-top: 20px;
+
+    .item {
+      width: 291px;
+      //height: 386px;
+      background-color: #fff;
+      margin-bottom: 12px;
+      padding-bottom: 20px;
+
+      a {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        .album {
+          width: 180px;
+          height: 180px;
+
+          margin: 30px 0;
+        }
+
+        .title {
+          font-weight: bold;
+          color: #000;
+        }
+
+        .sub-title {
+          color: #999;
+          margin-top: 12px;
+          margin-bottom: 18px;
+        }
+
+        .price {
+          font-weight: bold;
+          color: #f00;
+          font-size: 16px;
+          margin-bottom: 10px;
+        }
+
+        .tags {
+          display: flex;
+          font-size: 12px;
+          margin-bottom: 10px;
+
+          .tag {
+            border: 1px solid red;
+            border-radius: 3px;
+            padding: 2px 3px;
+            margin: 0 3px;
+          }
+        }
+
+        .appraise {
+          display: flex;
+          font-size: 12px;
+
+          .count {
+            margin: 0 5px;
+          }
+        }
+      }
+    }
+  }
 }
