--- a/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.less
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.less
@@ -102,7 +102,7 @@
           .tag {
             border: 1px solid red;
             border-radius: 3px;
-            padding: 2px 3px;
+            padding: 0 3px;
             margin: 0 3px;
           }
         }
