--- a/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.less
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.less
@@ -72,8 +72,7 @@
         .album {
           width: 180px;
           height: 180px;
-
-          margin: 30px 0;
+          margin: 20px 0;
         }
 
         .title {
@@ -84,7 +83,7 @@
         .sub-title {
           color: #999;
           margin-top: 12px;
-          margin-bottom: 18px;
+          margin-bottom: 10px;
         }
 
         .price {
@@ -107,7 +106,7 @@
           }
         }
 
-        .appraise {
+        .comment {
           display: flex;
           font-size: 12px;
 
