--- a/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.css
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.css
@@ -89,9 +89,11 @@
 }
 .product .product-list .item a .comment {
   display: flex;
+  justify-content: space-between;
   font-size: 12px;
+  color: #666;
 }
 .product .product-list .item a .comment .count {
-  margin: 0 5px;
+  margin-right: 5px;
 }
 /*# sourceMappingURL=index.css.map */
