--- a/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.less
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.less
@@ -108,10 +108,12 @@
 
         .comment {
           display: flex;
+          justify-content: space-between;
           font-size: 12px;
+          color: #666;
 
           .count {
-            margin: 0 5px;
+            margin-right: 5px;
           }
         }
       }
