--- a/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.css
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.css
@@ -50,6 +50,10 @@
   background-color: #fff;
   margin-bottom: 12px;
   padding-bottom: 20px;
+  transition: all 0.8s;
+}
+.product .product-list .item:hover {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 .product .product-list .item a {
   display: flex;
