--- a/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.less
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.less
@@ -63,6 +63,11 @@
       background-color: #fff;
       margin-bottom: 12px;
       padding-bottom: 20px;
+      transition: all 0.8s;
+
+      &:hover {
+        box-shadow: 0 0 10px rgba(0, 0, 0, .3);
+      }
 
       a {
         display: flex;
