--- a/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.less
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.less
@@ -61,7 +61,6 @@
       width: 291px;
       background-color: #fff;
       margin-bottom: 12px;
-      padding-bottom: 20px;
       transition: all 0.8s;
 
       &:hover {
@@ -115,12 +114,17 @@
           justify-content: space-between;
           font-size: 12px;
           color: #666;
+          padding-bottom: 30px;
 
           .count {
             margin-right: 5px;
           }
         }
       }
+    }
+
+    .empty {
+      height: 0;
     }
   }
 }
