--- a/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.css
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.css
@@ -49,7 +49,6 @@
   width: 291px;
   background-color: #fff;
   margin-bottom: 12px;
-  padding-bottom: 20px;
   transition: all 0.8s;
 }
 .product .product-list .item:hover {
@@ -96,8 +95,12 @@
   justify-content: space-between;
   font-size: 12px;
   color: #666;
+  padding-bottom: 30px;
 }
 .product .product-list .item a .comment .count {
   margin-right: 5px;
+}
+.product .product-list .empty {
+  height: 0;
 }
 /*# sourceMappingURL=index.css.map */
