--- a/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.less
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.less
@@ -128,3 +128,40 @@
     }
   }
 }
+
+.banner {
+  position: relative;
+  width: 1920px;
+  height: 550px;
+  overflow: hidden;
+
+
+  .banner-img-list {
+    display: flex;
+    flex-wrap: wrap;
+
+
+    img {
+      width: 100%;
+    }
+  }
+
+  .banner-dotted {
+    display: flex;
+    position: absolute;
+    justify-content: space-between;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0 auto;
+    width: 158px;
+    height: 30px;
+
+    .item {
+      width: 8px;
+      height: 8px;
+      background-color: pink;
+      border-radius: 50%;
+    }
+  }
+}
