--- a/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.less
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.less
@@ -160,8 +160,14 @@
     .item {
       width: 8px;
       height: 8px;
-      background-color: pink;
+      background-color: #ccc;
       border-radius: 50%;
+      cursor: pointer;
+
+      &:hover{
+        background-color: #fff;
+      }
+
     }
   }
 }
