--- a/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.less
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.less
@@ -132,11 +132,11 @@
 .banner {
   position: relative;
   height: 550px;
-  overflow: hidden;
 
   .banner-img-list {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
+    overflow: hidden;
 
     .item {
       width: 100%;
