--- a/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.css
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.css
@@ -106,11 +106,11 @@
 .banner {
   position: relative;
   height: 550px;
-  overflow: hidden;
 }
 .banner .banner-img-list {
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
+  overflow: hidden;
 }
 .banner .banner-img-list .item {
   width: 100%;
