--- a/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.less
+++ b/02-JavaScript/01-JavaScript基础/03_华为商城/css/index.less
@@ -130,16 +130,20 @@
 }
 
 .banner {
-  position: relative;
   height: 550px;
+  position: relative;
 
   .banner-img-list {
-    display: flex;
-    flex-wrap: nowrap;
-    overflow: hidden;
+    position: relative;
 
     .item {
+      position: absolute;
+      left: 0;
+      top: 0;
       width: 100%;
+      overflow: hidden;
+
+      opacity: 0;
 
       img {
         position: relative;
@@ -149,6 +153,10 @@
         width: 1920px;
         height: 550px;
       }
+    }
+
+    .active {
+      opacity: 1;
     }
   }
 
@@ -191,3 +199,66 @@
     }
   }
 }
+
+//.banner {
+//  position: relative;
+//  height: 550px;
+//
+//  .banner-img-list {
+//    display: flex;
+//    flex-wrap: nowrap;
+//    overflow: hidden;
+//
+//    .item {
+//      width: 100%;
+//
+//      img {
+//        position: relative;
+//        left: 50%;
+//        transform: translate(-50%);
+//
+//        width: 1920px;
+//        height: 550px;
+//      }
+//    }
+//  }
+//
+//  .banner-control {
+//    position: absolute;
+//    left: 0;
+//    top: 0;
+//    bottom: 0;
+//    right: 0;
+//    margin: auto;
+//
+//    display: flex;
+//    justify-content: space-between;
+//    align-items: center;
+//
+//  }
+//
+//  .banner-dotted {
+//    display: flex;
+//    position: absolute;
+//    justify-content: space-between;
+//    left: 0;
+//    right: 0;
+//    bottom: 0;
+//    margin: 0 auto;
+//    width: 158px;
+//    height: 30px;
+//
+//    .item {
+//      width: 8px;
+//      height: 8px;
+//      background-color: #ccc;
+//      border-radius: 50%;
+//      cursor: pointer;
+//
+//      &:hover {
+//        background-color: #fff;
+//      }
+//
+//    }
+//  }
+//}
