--- a/03-常用的JavaScript库/06_官网/css/navbar.less
+++ b/03-常用的JavaScript库/06_官网/css/navbar.less
@@ -3,7 +3,7 @@
 
   .container-fluid {
     max-width: var(--content-width);
-
+    // logo
     .navbar-brand {
       .logo {
         height: 26px;
@@ -11,8 +11,9 @@
       }
     }
 
-    #navbarNav {
-      justify-content: space-between;
+    // 导航项
+    .navbar-nav {
+      margin-right: auto;
 
       .link-text {
         padding: 8px 25px;
@@ -28,6 +29,10 @@
           }
         }
       }
+    }
+
+    .hot-line {
+      font-size: var(--font-size);
     }
 
   }
